# adventofcode

./: pyproject.toml  readme.md
adventofcode23/day1/: day1.py
adventofcode23/day10/: day10.py
adventofcode23/day11/: day11.py
adventofcode23/day12/: day12.py
adventofcode23/day13/: day13.py
adventofcode23/day14/: day14.py
adventofcode23/day15/: day15.py
adventofcode23/day16/: day16.py
adventofcode23/day17/: day17.py
adventofcode23/day18/: day18.py
adventofcode23/day19/: day19.py
adventofcode23/day2/: day2.py
adventofcode23/day20/: day20.py
adventofcode23/day4/: day4.py
adventofcode23/day6/: README.md  day6.py
adventofcode23/day8/: day8.py
adventofcode23/day9/: day9.py
adventofcode24/day1/: day1.py
adventofcode24/day10/: day10.py
adventofcode24/day11/: day11.py
adventofcode24/day12/: day12.py
adventofcode24/day13/: day13.py
adventofcode24/day14/: day14.py
adventofcode24/day15/: day15.py
adventofcode24/day16/: day16.py  tdqsdq
adventofcode24/day17/: day17.py
adventofcode24/day18/: day18.py
adventofcode24/day19/: day19.py
adventofcode24/day2/: day2.py
adventofcode24/day20/: day20.py
adventofcode24/day21/: day21.py
adventofcode24/day22/: day22.py
adventofcode24/day3/: day3.py
adventofcode24/day4/: day4.py
adventofcode24/day5/: README.md  day5.py
adventofcode24/day6/: README.md  day6.py
adventofcode24/day7/: day7.py
adventofcode24/day8/: day8.py
adventofcode24/day9/: day9.py
adventofcode25/day1/: day1.py
adventofcode25/day2/: day2.py
adventofcode25/day3/: day3.py
adventofcode25/day4/: day4.py
