[project]
name = "adventofcode"
version = "1.0.0"
description = "Default template for PDM package"
authors = [{ name = "444chak", email = "444chak@gmail.com" }]
dependencies = []
requires-python = "==3.10.*"
readme = "README.md"
license = { text = "MIT" }


[tool.pdm]
distribution = false

[tool.ruff]
select = [
    "F",  # Pyflakes
    "E",  # Pycodestyle
    "W",  # Pycodestyle
    "UP", # pyupgrade
    "I",  # isort
    "PL", # Pylint
    "TC", # type checker
]
